# hand_sign_detection_dynamic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLEANUP.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.worker  README.md  cleanup.ps1  cleanup.sh  docker-compose.yml  index.html  launch.py  lstm_model.ipynb  lstm_model_training.ipynb  model_training_orchestrator.py  package.json  pyproject.toml  requirements-device.txt  requirements-runtime.txt  requirements-training.txt  requirements.txt  run.ps1  run.sh  run_lstm_notebook_cells.py  training_guide.md
.github/workflows/: ci.yml  pr-checks.yml
config/: README.md
data/: README.md
docs/: FRONTEND.md  PERFORMANCE.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  SECRETS.md  architecture_and_workflows.md
examples/: README.md  basic_usage.py
frontend/: Dockerfile
frontend/app/: globals.css  page.tsx  types.ts
frontend/app/components/: ControlButton.tsx  GestureTimeline.tsx  MetricTile.tsx
frontend/app/console/: page.tsx
frontend/app/hooks/: useCalibrationFlow.ts  useCameraCapture.ts  usePredictionLoop.ts
models/: README.md  best_model.keras  clustering_summary.csv  gesture_model.keras  lstm_autoencoder.keras  lstm_best.keras  lstm_encoder.keras  training_log.csv
notebooks/: README.md  lstmTraining.ipynb  lstm_training.ipynb  unsupervised_lstm.ipynb
requirements/: README.md  requirements-device.txt  requirements-runtime.txt  requirements-training.txt
scripts/: benchmark.py  profile.py  run.ps1  run.sh
src/: api_server.py  job_queue.py  lstm_trainer.py  random_forest_trainer.py  shared_artifacts.py  train_model.py  training_pipeline.py  video_preprocessing_pipeline.py  wlasl_data_preprocessor.py  worker.py
src/hand_sign_detection/: __init__.py  main.py
src/hand_sign_detection/api/: __init__.py  app.py  dependencies.py
src/hand_sign_detection/api/routes/: __init__.py  combos.py  health.py  predict.py  training.py
src/hand_sign_detection/core/: __init__.py  config.py  logging.py  redis.py  shared_state.py
src/hand_sign_detection/models/: __init__.py  features.py  manager.py
src/hand_sign_detection/services/: __init__.py  combo_detection.py  prediction.py  rate_limiting.py
src/hand_sign_detection/training/: __init__.py  artifact_manager.py  job_queue.py  jobs.py  lstm_trainer.py  preprocessor.py  rf_trainer.py  unsupervised.py
src/training_module/: __init__.py  cli.py  config.py  features.py  jobs.py  service.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_validation.py  test_core_config.py  test_edge_cases.py  test_integration.py  test_models.py  test_services.py
