[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-sign-detection"
version = "1.0.0"
description = "Real-time hand sign/gesture recognition with ML backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Development Team"}]

# Core runtime dependencies (used for inference API)
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless==4.8.1.78",
    "joblib==1.3.2",
    "scikit-learn==1.3.2",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "redis==5.0.1",
    "rq==1.15.1",
    "pandas==2.0.3",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
# For local/edge device training (no TensorFlow, smaller deps)
device = [
    "tqdm==4.66.1",
    "mediapipe==0.10.8",
]

# For full training on workstations (includes TensorFlow/Keras)
training = [
    "tensorflow==2.15.1",
    "tqdm==4.66.1",
    "mediapipe==0.10.8",
]

# Development and testing
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

# Documentation
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/hand-sign-detection"
Documentation = "https://hand-sign-detection.readthedocs.io"
Repository = "https://github.com/yourorg/hand-sign-detection.git"
Issues = "https://github.com/yourorg/hand-sign-detection/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
