[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-sign-detection"
version = "1.0.0"
description = "Real-time hand sign/gesture recognition with ML backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Development Team"}]

# Core runtime dependencies (used for inference API)
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless==4.8.1.78",
    "joblib==1.3.2",
    "scikit-learn==1.3.2",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "redis==5.0.1",
    "rq==1.15.1",
    "pandas==2.0.3",
    "python-multipart==0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# For local/edge device training (no TensorFlow, smaller deps)
device = [
    "tqdm==4.66.1",
    "mediapipe==0.10.8",
]

# For full training on workstations (includes TensorFlow/Keras)
training = [
    "tensorflow==2.15.1",
    "tqdm==4.66.1",
    "mediapipe==0.10.8",
]

# Development and testing
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "httpx>=0.25.0",
]

# Documentation
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/hand-sign-detection"
Documentation = "https://hand-sign-detection.readthedocs.io"
Repository = "https://github.com/yourorg/hand-sign-detection.git"
Issues = "https://github.com/yourorg/hand-sign-detection/issues"

[project.scripts]
hand-sign-detection = "hand_sign_detection.main:main"

[project.entry-points."hand_sign_detection.trainers"]
rf = "hand_sign_detection.training.rf_trainer:RandomForestTrainer"
lstm = "hand_sign_detection.training.lstm_trainer:LstmTrainer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hand_sign_detection*"]

[tool.setuptools.package-dir]
"" = "src"

# ============================================
# Ruff - Fast Python linter and formatter
# Replaces black, isort, flake8 with unified tooling
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "SIM117"]  # Allow nested with in tests
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["hand_sign_detection"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================
# Legacy tool configs (kept for compatibility)
# ============================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
